--- a/django_Course/docker-compose.yml
+++ b/django_Course/docker-compose.yml
@@ -9,16 +9,18 @@ services:
     volumes:
       - .:/code
     entrypoint: ['sh', 'run-django.sh']
+    depends_on:
+      - bd
 
-  sidia_bd:
+  bd:
     image: mdillon/postgis
     environment:
-      POSTGRES_PASWORD: root
+      POSTGRES_PASSWORD: root
       POSTGRES_DB: sidia
     ports:
       - "5433:5432"
     volumes:
-      - /backup/arquivos:/var/lib/postgresql/data
+      - sidia-data-prod:/var/lib/postgresql/data
 
   adminer:
     image: adminer
@@ -26,4 +28,4 @@ services:
       - 8081:8080
 
 volumes:
-  postgres-data:
+  sidia-data-prod:
