--- a/django_Course/docker-compose.yml
+++ b/django_Course/docker-compose.yml
@@ -12,20 +12,31 @@ services:
     depends_on:
       - bd
 
+  proxy:
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./etc/nginx:/etc/nginx/conf.d/
+      - ./log/nginx:/var/log/nginx
+      - ./static:/var/www/static
+      - ./media:/var/www/media
+    depends_on:
+      - app
+    networks:
+      - web
+
   bd:
     image: mdillon/postgis
     environment:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: sidia
     ports:
-      - "5433:5432"
+      - "5434:5432"
     volumes:
       - sidia-data-prod:/var/lib/postgresql/data
 
-  adminer:
-    image: adminer
-    ports:
-      - 8081:8080
 
 volumes:
   sidia-data-prod:
